--- a/EditTODO.html
+++ b/EditTODO.html
@@ -14,7 +14,10 @@
 
 	<body>
 
-		<p>This is the first paragraph in the body of your new HTML file!</p>
+		<h1 class="text-center">Guide how to edin TODO</h1>
+		<p class="text-center">1. Click on Edit button.</p>
+		<p class="text-center">2. Change TODO information</p>
+		<p class="text-center">3. Click save button.</p>
 		<p class="text-center">
 			<button class="btn btn-success" onclick="location.href='Homepage.html'" type="button">Go back</button>
 		</p>
