--- a/EditTODO.html
+++ b/EditTODO.html
@@ -14,12 +14,25 @@
 
 	<body>
 
-		<h1 class="text-center">Guide how to edin TODO</h1>
-		<p class="text-center">1. Click on Edit button.</p>
-		<p class="text-center">2. Change TODO information</p>
-		<p class="text-center">3. Click save button.</p>
-		<p class="text-center">
-			<button class="btn btn-success" onclick="location.href='Homepage.html'" type="button">Go back</button>
-		</p>
+		<div class="container fluid">
+
+			<h1 class="col-lg-12 col-md-12 col-xs-12">Fill the form to edit a TODO: </h1>
+			<form>
+				  <div class="form-group">
+					<label for="TODO">TODO:</label>
+					<input type="text" class="form-control" id="TODO" maxlength="160">
+				  </div>
+				  <div class="form-group">
+					<label for="deadline">Deadline:</label>
+					<input class="form-control" id="deadline">
+				  </div>
+				  <div class="form-group">
+					<label for="percent">Prozent:</label>
+					<input type="number" class="form-control" id="percent" min="0" max="100">
+				  </div>
+			</form>
+			<a href="#" class="col-lg-6 col-md-6 col-xs-6 btn btn-success btn-md">OK</a> 
+			<button class=" col-lg-6 col-md-6 col-xs-6 btn btn-success btn-md" onclick="location.href='Homepage.html'" type="button">Go back</button>
+		</div>
 	</body>
 </html>
