--- a/Homepage.html
+++ b/Homepage.html
@@ -10,18 +10,15 @@
 	</head>
 
 	<body>
-		<div class="container">
-			<div class="row-fluid">
-				<div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bg-danger">
+		<div class="container fluid">
+			<div class="row text-center">
+				<div class="col-lg-4 col-xs-4 col-sm-4 col-md-4 bg-danger">
 					<p class="text-center">Site map:</p>
 				</div>
-				<div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bg-warning">
+				<div class="col-lg-4 col-xs-4 col-sm-4 col-md-4 bg-success">
 					<p class="text-center"><a href="CreateTODO.html">CreateTODO</a> </p>
 				</div>
-				<div class="col-lg-3 col-xs-3 col-sm-3 col-md-3  bg-warning">
-					<p class="text-center"><a href="EditTODO.html">EditTODO</a> </p>
-				</div>
-				<div class="col-lg-3 col-xs-3 col-sm-3 col-md-3 bg-warning">
+				<div class="col-lg-4 col-xs-4 col-sm-4 col-md-4 bg-warning">
 					<p class="text-center"><a href="Impressum.html">Impressum</a> </p>
 				</div>
 				</br>
@@ -29,8 +26,8 @@
 				</br>
 				</br>
 				</br>
-			<div class="row">
-				<table class="table table-striped">
+			<div class="row text-center">
+				<table class="table table-striped" border="1">
 					<thead>
 						<tr class="bg-success">
 							<th>TODO </th>
@@ -44,28 +41,28 @@
 						<td>Create Homepage</td>
 						<td>02.05.2017</td>
 						<td>100%</td>
-						<td><button class="btn btn-warning">Edit</button>  <button class="btn btn-danger">Delete</button></td>
+						<td><a href="EditTODO.html" class="btn btn-warning">Edit</a>  <button class="btn btn-danger">Delete</button></td>
 					</tr>
 
 					<tr>
 						<td>Buy eggs</td>
 						<td>02.03.2034</td>
 						<td>0%</td>
-						<td><button class="btn btn-warning">Edit</button>  <button class="btn btn-danger">Delete</button></td>
+						<td><a href="EditTODO.html" class="btn btn-warning">Edit</a>  <button class="btn btn-danger">Delete</button></td>
 					</tr>
 
 					<tr>
 						<td>Eat egg</td>
 						<td>04.04.2018</td>
 						<td>9%</td>
-						<td><button class="btn btn-warning">Edit</button>  <button class="btn btn-danger">Delete</button></td>
+						<td><a href="EditTODO.html" class="btn btn-warning">Edit</a>  <button class="btn btn-danger">Delete</button></td>
 					</tr>
 
 					<tr>
 						<td>Finish bachelor degree</td>
 						<td>30.08.2018</td>
 						<td>45%</td>
-						<td><button class="btn btn-warning">Edit</button>  <button class="btn btn-danger">Delete</button></td>
+						<td><a href="EditTODO.html" class="btn btn-warning">Edit</a>  <button class="btn btn-danger">Delete</button></td>
 					</tr>
 					</tbody>
 				</table>
