--- a/Impressum.html
+++ b/Impressum.html
@@ -14,7 +14,7 @@
 
 	<body>
 
-		<p class="text-center">Authors: Denis Rangelov, Martin Kachev</p>
+		<p class="text-center">Authors: Denis Rangelov, Iskra Racheva, Martin Kachev</p>
 		<p class="text-center">
 			<button class="btn btn-success" onclick="location.href='Homepage.html'" type="button">Go back</button>
 		</p>
