--- a/socnetz/todo/htmlfiles/EditTODO.html
+++ b/socnetz/todo/htmlfiles/EditTODO.html
@@ -14,12 +14,24 @@
 
 	<body>
 
-		<h1 class="text-center">Guide how to edin TODO</h1>
-		<p class="text-center">1. Click on Edit button.</p>
-		<p class="text-center">2. Change TODO information</p>
-		<p class="text-center">3. Click save button.</p>
-		<p class="text-center">
-			<button class="btn btn-success" onclick="location.href='Homepage.html'" type="button">Go back</button>
-		</p>
+		<div class="container fluid">
+
+			<h1 class="col-lg-12 col-md-12 col-xs-12">Fill the form to edit a TODO: </h1>
+			<form method="POST">
+				<div class="form-group">
+					<label for="TODO">TODO:</label>
+					<input required type="text" name="description" value="{{currentTodo}}" class="form-control" id="TODO"   maxlength="160">
+				  </div>
+				  <div class="form-group">
+					<label for="deadline">Deadline:</label>
+					  <input required type="date" class="form-control"  value="{{todo.deadline}}"   name="deadline" id="deadline">
+				  </div>
+				  <div class="form-group">
+					<label for="percent">Percent:</label>
+					<input required type="text" name="percent" value="{{currentTodo.percent}}" class="form-control" id="percent" min="0" max="100">
+				  </div>
+				<button type="submit" class="col-lg-12 col-md-12 col-xs-12 btn btn-success btn-md">OK</button>
+			</form>
+		</div>
 	</body>
 </html>
