--- a/socnetz/todo/htmlfiles/Impressum.html
+++ b/socnetz/todo/htmlfiles/Impressum.html
@@ -14,9 +14,7 @@
 
 	<body>
 
-		<p class="text-center">Authors: Denis Rangelov, Martin Kachev</p>
-		<p class="text-center">
-			<button class="btn btn-success" onclick="location.href='Homepage.html'" type="button">Go back</button>
-		</p>
+		<p class="text-center">Authors: Denis Rangelov, Martin Kachev, Iskra Racheva</p>
+
 	</body>
 </html>
